java 21+error handling